--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,6 @@
     <title>my webpage!</title>
   </head>
   <body>
-<<<<<<< HEAD
-    Hello, world! Hello, again! Hello a third time!
-=======
-    Hello, world! Hello, again! Hello, Hello!
->>>>>>> 91cb7098ee3e4c54d3dfab84500e7b21ade045d4
+    Hello, world!
   </body>
 </html>
